@@ -28,7 +28,12 @@ namespace EdB.PrepareCarefully {
 
         public override void DoWindowContents(Rect inRect) {
             Text.Font = GameFont.Small;
-            Widgets.Label(inRect, "EdB.PC.Error.Initialization".Translate());
+            if (VersionControl.CurrentVersion < PrepareCarefully.MinimumGameVersion) {
+                Widgets.Label(inRect, "EdB.PC.Error.GameVersion".Translate(VersionControl.CurrentVersionString, PrepareCarefully.MinimumGameVersion.ToString()));
+            }
+            else {
+                Widgets.Label(inRect, "EdB.PC.Error.Initialization".Translate());
+            }
         }
     }
 }
